--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,4 +1,7 @@
-node_modules
+
+
+
+
 # Logs
 logs
 *.log
@@ -34,6 +37,7 @@ bower_components
 build/Release
 
 # Dependency directories
+dist/
 node_modules/
 jspm_packages/
 
